<resources>
    <string name="app_name">Let Shoppa</string>
    <string name="linkwebsite">letshoppa.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="HomeText">Home</string>
    <string name="LogoutText">Logout</string>
    <string name="LoginText">Login</string>
    <string name="ShoppingText">Shopping</string>
    <string name="SettingText">Setting</string>
    <string name="ProfileText">Profile</string>
    <string name="MyCartText">My Cart</string>
    <string name="ContactText">Contact</string>
    <string name="ContactType">Contact type (email,phone,etc)</string>
    <string name="your_contact">Your Contact</string>
    <string name="contact_type_">Contact Type : </string>
    <string name="contact_type">Contact Type</string>
    <string name="contact_">Contact : </string>
    <string name="your_contact_list">Your contact list</string>
    <string name="add_contact">Add Contact</string>
    <string name="your_primary_email">Your primary email</string>
    <string name="FollowingText">Follow</string>
    <string name="Unfollow">Unfollow</string>
    <string name="Follow">Follow</string>
    <string name="Following">Following</string>
    <string name="MessageText">Message</string>
    <string name="helloText">Hello</string>
    <string name="MyShopText">My Shop</string>
    <string name="MyOrderText">My Order</string>
    <string name="MyPurchaseText">My Purchase</string>
    <string name="PeopleText">People</string>
    <string name="Help">Help</string>
    <string name="Edit">Edit</string>
    <string name="Save">Save</string>
    <string name="CategoryShopText">Category Shop</string>
    <string name="SearchText">Search </string>
    <string name="SendText">Send </string>
    <string name="Qty">Qty</string>
    <string name="Qty_">Qty : </string>
    <string name="Price_">Price : Rp. </string>
    <string name="Total_price_">Total Price : Rp. </string>
    <string name="Status_">Status : </string>
    <string name="posthint">What\'s on your mind?</string>
    <string name="from_">From : </string>
    <string name="shop_">Shop : </string>
    <string name="date_">Date : </string>
    <string name="date">Date</string>
    <string name="wanttobuy">Want to Buy</string>
    <string name="incart">In Cart</string>
    <string name="cancelled">Cancelled</string>
    <string name="purchased">Purchased</string>
    <string name="radius">Radius</string>
    <string name="view_location">View Location</string>
    <string name="view_shop_from_your_location">View Shop from your Location</string>
    <string name="reviewHint">Your review</string>
    <string name="status_product">Status Product</string>
    <string name="your_post">Your Post</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="view_person">View Person</string>
    <string name="prompt_delete_post">Delete Post</string>
    <string name="action">Action</string>
    <string name="distance_">Distance :</string>
    <string name="distance">Distance</string>
    <string name="report">Report</string>
    <string name="buy">Buy</string>
    <string name="prompt_cancel_order">Cancel order</string>
    <string name="prompt_reject_order">Reject order</string>
    <string name="prompt_accept_order">Accept order</string>
    <string name="prompt_buy_product">Buy this product</string>
    <string name="prompt_save_status">Save status</string>
    <string name="prompt_delete_contact">Delete contact</string>
    <string name="inbox">Inbox</string>
    <string name="sentbox">Sentbox</string>
    <string name="from__">From :</string>
    <string name="to__">To : </string>
    <string name="sent_">Sent :</string>
    <string name="send">Send</string>
    <string name="reply">Reply</string>
    <string name="close">Close</string>
    <string name="shops_owner">Shop\'s Owner</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="view_contact">View Contact</string>
    <string name="send_message">Send Message</string>
    <string name="buka">Buka</string>
    <string name="tutup">Tutup</string>
    <string name="dijual">Dijual</string>
    <string name="habis">Habis</string>
    <string name="tidak_dijual">Tidak Dijual</string>
    <string name="title_activity_login">Let Shoppa</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="error_email_already_exist">Email already registered</string>
    <string name="error_repassword_same_password">Password and Re-Password is not match</string>
    <string name="prompt_name">Full Name</string>
    <string name="connection_failed">"Connection Failed"</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="prompt_repassword">Re-Password</string>
    <string name="gender">Gender</string>
    <string name="birthdate">Birthdate</string>
    <string name="linkagreement">I have read the Guidelines and Agree to the Term of Use for the Letshoppa@ Service</string>
    <string name="register">Register</string>
    <string name="changedate">Change Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_unregistered_account">Unregistered account</string>
    <string name="prompt_product_name">Product\'s Name</string>
    <string name="product_price">Product Price</string>
    <string name="shops_name">Shop\'s name</string>
    <string name="cancel">Cancel</string>
    <string name="year">Year</string>
    <string name="year_">Year : </string>
    <string name="month">Month</string>
    <string name="month_">Month :</string>
    <string name="total_order__">Total Order : </string>
    <string name="pending">Pending</string>
    <string name="total">Total</string>
    <string name="helpText">If you need any help, please email to feechanz@yahoo.co.id</string>
    <string name="termandcondition">Terms and Conditions of Use</string>
    <string name="definitions">1. Definitions</string>
    <string name="definitionItems">
        The following words and terms shall have the meanings set forth below when they are used in the Terms and Conditions.
        \n1.1.\"content(s)\"means information such as text, audio files, music, images, videos, software, programs, computer code, and the like.
        \n1.2.\"Content(s)\"means content(s)that may be accessed through the Service.
        \n1.3.\"Submitted Content(s)\"means content(s)that Users have submitted, transmitted, or uploaded.
    </string>
    <string name="agreements">2. Agreement to Terms and Conditions</string>
    <string name="agreementItems">
        2.1. All Users shall use the Service in accordance with the terms stated in the Terms and Conditions. Users may not use the Service unless they agree to the Terms and Conditions. Such agreement is valid and irrevocable.
        \n2.2. Minors may use the Service only with consent from their parents or legal guardian. Furthermore, if Users use the Service on behalf of, or for the purposes of a business enterprise, then that business enterprise shall also be deemed to have agreed to the Terms and Conditions. Such agreement is valid and irrevocable.
        \n2.3. By actually using the Service, Users are deemed to have agreed to the Terms and Conditions. Such agreement is valid and irrevocable.
        \n2.4. If there are Separate Terms and Conditions for the Service, Users also shall comply with such Separate Terms and Conditions as well as the Terms and Conditions.
    </string>
    <string name="modifications">
        3. Modification of the Terms and Conditions
    </string>
    <string name="modificationItems">
        The Company may modify the Terms and Conditions or Separate Terms and Conditions when the Company deems necessary, without providing prior notice to Users. The modification will become effective once the modified Terms and Conditions or Separate Terms and Conditions are posted on an appropriate location within the website operated by the Company. Users shall be deemed to have granted valid and irrevocable consent to the modified Terms and Conditions or Separate Terms and Conditions by continuing to use the Service. Users shall refer to the Terms and Conditions on a regular basis when using the Service, since a separate notification regarding the modification to Terms and Conditions may not be provided.
    </string>
    <string name="accounts">
        4. Account
    </string>
    <string name="accountItem">
        4.1. Users, when providing information about him/herself to the Company, shall provide genuine, accurate, and complete information while using the Service, and keep such information up-to-date at all times.
        \n4.2. If Users register a password while using the Service, Users shall exercise due care and responsibility in order for the password not to be used in an unlawful manner. The Company may treat all activities conducted with the password as activities that have been conducted by the holder of the password him/herself.
        \n4.3. Any registered User to the Service may delete his/her account and withdraw from using the Service, at any time.
        \n4.4. The Company may suspend or delete a User\'s account without giving prior notice to the User if the Company believes that the User is violating or has violated the Terms and Conditions.
        \n4.5. The Company reserves the right to delete any account that has been inactive for a period of a year or more since its last activation, without any prior notice to the User.
        \n4.6. Users\'rights to use the service shall expire when their account has been deleted for any reason. The account cannot be retrieved even if Users have accidentally deleted their account, and the Company asks Users to be aware of this.
        \n4.7. Each account in the Service is for the exclusive use and belongs solely to the owner of the account. Users may not transfer or lend their accounts to any third party nor may their accounts be inherited by any third party.
    </string>
    <string name="restrictions">
        5. Restrictions
    </string>
    <string name="restrictionsItems">
        Users shall not engage in the following when using the Service.
        \n12.1. Activities that violate the law, court verdicts, resolutions or orders, or administrative measures that are legally binding.
        \n12.2. Activities that may hinder public order or customs.
        \n12.3. Activities that infringe intellectual property rights, such as copyrights, trademarks and patents, fame, privacy, and all other rights of the Company and/or a third party granted by the law or contract.
        \n12.4. Activities that post or transmit violent or sexual expressions;expressions that lead to discrimination by race, national origin, creed, sex, social status, family origin, etc.;expressions that induce or encourage suicide, self-injury behavior, or drug abuse;or anti-social expressions that include anti-social content and lead to the discomfort of others.
        \n12.5. Activities that lead to the misrepresentation of the Company and/or a third party, or intentionally spread false information.
    </string>
</resources>