<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_order_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.letshoppa.feechan.letshoppa.OrderDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/id_icon_product"
            android:layout_width="35pt"
            android:layout_height="35pt"
            android:layout_gravity="center"
            android:src="@android:drawable/sym_def_app_icon" />

        <TextView
            android:id="@+id/namaProductTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textSize="8pt"
            android:text="@string/prompt_product_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:layout_marginRight="2dp"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/shop_"/>
            <TextView
                android:id="@+id/shopNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/shops_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:layout_marginRight="2dp"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/Price_"/>
            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/product_price"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:layout_marginRight="2dp"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/Qty_"/>
            <TextView
                android:id="@+id/qtyTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/Qty"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:layout_marginRight="2dp"
                android:text="@string/Total_price_"/>
            <TextView
                android:id="@+id/totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/product_price"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:layout_marginRight="2dp"
                android:text="@string/Status_"/>
            <TextView
                android:id="@+id/statusTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/pending"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:layout_marginRight="2dp"
                android:text="@string/date_"/>
            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/date"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/firstButton"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/accept" />
            <Button
                android:id="@+id/secondButton"
                android:layout_width="0dp"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:layout_marginRight="2dp"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/from_"/>
            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="7pt"
                android:textAppearance="?attr/textAppearanceListItemSmall"
                android:text="@string/prompt_name"/>
        </LinearLayout>
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="7pt"
            android:textAppearance="?attr/textAppearanceListItemSmall"
            android:text="@string/prompt_email"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/black"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/ContactText"/>
        <ListView
            android:id="@+id/contactListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/Maroon"
            android:dividerHeight="2pt"
            android:background="@color/Moccasin"/>
    </LinearLayout>
</RelativeLayout>
